# calibration-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/bot/: config.py  main.py
src/bot/db/: connection.py  schema.sql
src/bot/db/queries/: answers.py  pending.py  questions.py  resolutions.py  skipped.py  users.py
src/bot/handlers/: answer.py  callbacks.py  domains.py  help.py  question.py  settings.py  start.py  stats.py  streak.py
src/bot/helpers/: formatting.py  is_def.py
src/bot/models/: question.py  user.py
src/bot/services/: categorizer.py  manifold.py  question_picker.py  resolution.py  scheduler.py  scoring.py  translator.py
src/bot/services/sources/: __init__.py  _topic_map.py  base.py  manifold_source.py  metaculus_source.py  polymarket_source.py
